// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button components should render ButtonText disabled successfully 1`] = `
<Text
  disabled={true}
  style={
    Array [
      Object {
        "color": "#9fa8be",
        "fontFamily": "Prelo-SemiBold",
        "fontSize": 28,
      },
    ]
  }
/>
`;

exports[`Button components should render ButtonText successfully 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#0F265C",
        "fontFamily": "Prelo-SemiBold",
        "fontSize": 28,
      },
    ]
  }
/>
`;

exports[`Button components should render primary ButtonContainer successfully 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFDD00",
      "borderColor": "#FFDD00",
      "borderRadius": 6,
      "borderStyle": "solid",
      "borderWidth": 1,
      "justifyContent": "center",
      "minWidth": 120,
      "opacity": 1,
      "paddingBottom": 10,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 18,
      "width": "auto",
    }
  }
/>
`;

exports[`Button components should render primary disabled ButtonContainer successfully 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF38D",
      "borderColor": "#FFF38D",
      "borderRadius": 6,
      "borderStyle": "solid",
      "borderWidth": 1,
      "justifyContent": "center",
      "minWidth": 120,
      "opacity": 1,
      "paddingBottom": 10,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 18,
      "width": "auto",
    }
  }
/>
`;

exports[`Button components should render primary with status ButtonContainer successfully 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFDD00",
      "borderColor": "#FFDD00",
      "borderRadius": 6,
      "borderStyle": "solid",
      "borderWidth": 1,
      "justifyContent": "center",
      "minWidth": 120,
      "opacity": 1,
      "paddingBottom": 10,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 18,
      "width": "auto",
    }
  }
/>
`;

exports[`Button components should render secondary ButtonContainer successfully 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e9ecf3",
      "borderColor": "#D4D8E1",
      "borderRadius": 6,
      "borderStyle": "solid",
      "borderWidth": 1,
      "justifyContent": "center",
      "minWidth": 120,
      "opacity": 1,
      "paddingBottom": 10,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 18,
      "width": "auto",
    }
  }
/>
`;

exports[`Button components should render secondary disabled ButtonContainer successfully 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e9ecf3",
      "borderColor": "#e9ecf3",
      "borderRadius": 6,
      "borderStyle": "solid",
      "borderWidth": 1,
      "justifyContent": "center",
      "minWidth": 120,
      "opacity": 1,
      "paddingBottom": 10,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 18,
      "width": "auto",
    }
  }
/>
`;
